# polygon-api

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  env.txt
.env/: env.txt
cmake/: polygon_api-config.cmake.in  utils.cmake
examples/: CMakeLists.txt
examples/Auth/: CMakeLists.txt  main.cpp
examples/CreateProblem/: CMakeLists.txt  main.cpp
examples/GetProblemsList/: CMakeLists.txt  main.cpp
examples/add/: CMakeLists.txt  main.cpp
include/json/: JsonBoolean.h  JsonList.h  JsonNumber.h  JsonObject.h  JsonParser.h  JsonString.h  JsonTemplate.h
include/json/src/: JsonList.cpp  JsonObject.cpp  JsonParser.cpp
include/polygon_api/: Account.h  ApiRequester.h  BaseRequester.h  Checker.h  PolygonSession.h  Problem.h  RawRequester.h  RequestBuilder.h  SHA512.h  export.h  polygon_api.h
src/: ApiRequester.cpp  BaseRequester.cpp  PolygonSession.cpp  Problem.cpp  RawRequester.cpp  RequestBuilder.cpp  SHA512.cpp  polygon_api.cpp
tests/: CMakeLists.txt  add_test.cpp  auth_test.cpp  cpr_test.cpp  create_problem_test.cpp  json_parser_test.cpp  sub_test.cpp
utils/: .env  EnvReader.cpp  EnvReader.h  env.txt
